refactor: refactor code base with hexagonal